--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <center><h2 class="subtitulo">Ingrese como:</h2></center>
 </body>
 <div class="User">
-    <a href="/Inicio de Usuario/LoginUser/LoginUsers.html">Usuario</a>
+    <a href="LoginUsers.html">Usuario</a>
 </div>
 <div class="Admin">
     <a href="/Inicio de administracion/LoginAdmin/LoginAdmin.html">Administrador</a>      
